--- a/style.css
+++ b/style.css
@@ -450,6 +450,9 @@ button{
     }
 }
 @media screen and (max-width:800px){
+    .header_info {
+        height: 200px;
+    }
     .header_info li{
         margin:20px 0 20px 0;
     }
